# bookmark-analytics-toolkit

./: .gitignore  CLASS.md  README.md  app.py  build_exe.py  build_wrapper.py  pyproject.toml
.github/workflows/: main.yml
data/: sample.json
src/bookmark_analytics_toolkit/: __init__.py  i18n.py
src/bookmark_analytics_toolkit/analysis/: __init__.py  hierarchy.py  statistics.py  text_analysis.py  text_analysis_sp.py  timeseries.py
src/bookmark_analytics_toolkit/data/: __init__.py  loader.py  preprocessor.py
src/bookmark_analytics_toolkit/visualization/: __init__.py  matplotlib_charts.py  plotly_charts.py  wordcloud_viz.py
